# audio-multieffect

./: .cproject  .gitignore  .gitmodules  .project  BUILD_DEBIAN.md  MAKEFILE_README.md  Makefile  QUICKSTART.md  README.md  compile-all  install-prerequisites.sh  main.cpp  makefile.defs  openocd.cfg  version.h
app/: blinky.cpp  blinky.hpp  config.hpp  echo.cpp  echo.hpp  freertos_hooks.cpp  gui.cpp  gui.hpp  ipc_controller.hpp  ipc_defs.hpp  ipc_effect_processor.hpp  utils.hpp
app/view/lcd_view/: CMakeLists.txt  filelist.txt  gui.hpp  lcd_view.cpp  lcd_view.hpp  ui.c  ui.h  ui_components.h  ui_events.cpp  ui_events.h  ui_fx_arpeggiator.c  ui_fx_compressor.c  ui_helpers.c  ui_screens.h
app/view/lcd_view/components/: ui_comp_fx_base.c  ui_comp_fx_btn.c  ui_comp_fx_ctrl_pnl.c  ui_comp_fx_knob.c  ui_comp_fx_switch.c  ui_comp_fx_switch.h
app/view/lcd_view/fonts/: ui_font_14_bold.c
app/view/lcd_view/images/: ui_img_btn_1_act_png.c  ui_img_btn_1_inact_png.c  ui_img_btn_knob_png.c  ui_img_logo_gmfx.c  ui_img_pot_ver_knob_png.c  ui_img_pot_ver_line_png.c
app/view/lcd_view/screens/: ui_Screen1.c  ui_blank.c  ui_fx_amp_sim.c  ui_fx_cabinet_sim.c  ui_fx_chorus.c  ui_fx_echo.c  ui_fx_equalizer.c  ui_fx_nam.c  ui_fx_noise_gate.c  ui_fx_overdrive.c  ui_fx_phaser.c  ui_fx_reverb.c  ui_fx_tremolo.c  ui_fx_tuner.c  ui_fx_vocoder.c  ui_settings.c  ui_splash.c
cmsis/: arm_common_tables.h  arm_const_structs.h  arm_math.h  cachel1_armv7.h  cmsis_device.h  cmsis_gcc.h  core_cm7.h  core_cmFunc.h  core_cmInstr.h  core_cmSimd.h  stm32f746xx.h  stm32f7xx.h  stm32h745xx.h  stm32h7xx.h
(+340 files in other folders)
